@@ -6,31 +6,45 @@
 package com.liferay.site.cmp.site.initializer.internal.model.listener.test;
 
 import com.liferay.arquillian.extension.junit.bridge.junit.Arquillian;
+import com.liferay.depot.constants.DepotConstants;
 import com.liferay.depot.constants.DepotRolesConstants;
+import com.liferay.depot.exception.DepotEntryStagedException;
+import com.liferay.depot.model.DepotEntry;
+import com.liferay.depot.service.DepotEntryLocalService;
+import com.liferay.exportimport.kernel.service.StagingLocalService;
+import com.liferay.object.constants.ObjectActionKeys;
 import com.liferay.object.model.ObjectEntry;
 import com.liferay.object.service.ObjectEntryLocalService;
 import com.liferay.petra.function.transform.TransformUtil;
+import com.liferay.portal.kernel.exception.ModelListenerException;
 import com.liferay.portal.kernel.model.Group;
+import com.liferay.portal.kernel.model.ResourceAction;
 import com.liferay.portal.kernel.model.ResourceConstants;
 import com.liferay.portal.kernel.model.ResourcePermission;
 import com.liferay.portal.kernel.model.Role;
 import com.liferay.portal.kernel.model.User;
 import com.liferay.portal.kernel.security.permission.ActionKeys;
 import com.liferay.portal.kernel.service.GroupLocalService;
+import com.liferay.portal.kernel.service.ResourceActionLocalService;
 import com.liferay.portal.kernel.service.ResourcePermissionLocalService;
 import com.liferay.portal.kernel.service.RoleLocalService;
 import com.liferay.portal.kernel.test.rule.AggregateTestRule;
+import com.liferay.portal.kernel.test.rule.DeleteAfterTestRun;
+import com.liferay.portal.kernel.test.util.GroupTestUtil;
+import com.liferay.portal.kernel.test.util.RandomTestUtil;
 import com.liferay.portal.kernel.test.util.ServiceContextTestUtil;
 import com.liferay.portal.kernel.test.util.TestPropsValues;
 import com.liferay.portal.kernel.test.util.UserTestUtil;
+import com.liferay.portal.kernel.util.ArrayUtil;
+import com.liferay.portal.kernel.util.HashMapBuilder;
 import com.liferay.portal.kernel.util.LocaleUtil;
 import com.liferay.portal.kernel.util.MapUtil;
-import com.liferay.portal.test.rule.FeatureFlag;
-import com.liferay.portal.test.rule.FeatureFlags;
+import com.liferay.portal.kernel.workflow.WorkflowConstants;
 import com.liferay.portal.test.rule.Inject;
 import com.liferay.portal.test.rule.LiferayIntegrationTestRule;
 import com.liferay.portal.test.rule.PermissionCheckerMethodTestRule;
 import com.liferay.site.cmp.site.initializer.test.util.CMPTestUtil;
+import com.liferay.site.cmp.site.initializer.test.util.ObjectEntryTestUtil;
 import com.liferay.site.cms.site.initializer.util.RoleUtil;
 
 import java.io.Serializable;
@@ -49,9 +63,6 @@ import org.junit.runner.RunWith;
 /**
  * @author Pedro Leite
  */
-@FeatureFlags(
-	featureFlags = {@FeatureFlag("LPD-17564"), @FeatureFlag("LPD-58677")}
-)
 @RunWith(Arquillian.class)
 public class ObjectEntryModelListenerTest {
 
@@ -65,92 +76,312 @@ public class ObjectEntryModelListenerTest {
 	@Before
 	public void setUp() throws Exception {
 		CMPTestUtil.getOrAddGroup(ObjectEntryModelListenerTest.class);
+
+		_depotEntry = _depotEntryLocalService.addDepotEntry(
+			HashMapBuilder.put(
+				LocaleUtil.getDefault(), RandomTestUtil.randomString()
+			).build(),
+			HashMapBuilder.put(
+				LocaleUtil.getDefault(), RandomTestUtil.randomString()
+			).build(),
+			DepotConstants.TYPE_SPACE,
+			ServiceContextTestUtil.getServiceContext());
 	}
 
 	@Test
 	public void testOnAfterCreate() throws Exception {
-		ObjectEntry projectObjectEntry = CMPTestUtil.addProjectObjectEntry();
+		ObjectEntry cmpProjectObjectEntry =
+			CMPTestUtil.addCMPProjectObjectEntry();
 
 		Group group = _groupLocalService.getGroup(
-			projectObjectEntry.getGroupId());
+			cmpProjectObjectEntry.getGroupId());
 
 		Assert.assertEquals(
 			group.getName(LocaleUtil.getDefault()),
-			MapUtil.getString(projectObjectEntry.getValues(), "title"));
+			MapUtil.getString(cmpProjectObjectEntry.getValues(), "title"));
 
 		Role role = RoleUtil.getOrAddCMSAdministratorRole(
 			TestPropsValues.getCompanyId(), TestPropsValues.getUserId());
 
 		_assertResourceActions(
-			projectObjectEntry, role.getName(), ActionKeys.ADD_DISCUSSION,
+			cmpProjectObjectEntry, role.getName(), ActionKeys.ADD_DISCUSSION,
 			ActionKeys.DELETE, ActionKeys.DELETE_DISCUSSION,
-			ActionKeys.PERMISSIONS, ActionKeys.UPDATE,
-			ActionKeys.UPDATE_DISCUSSION, ActionKeys.VIEW);
+			ActionKeys.PERMISSIONS, ActionKeys.SUBSCRIBE, ActionKeys.UPDATE,
+			ActionKeys.UPDATE_DISCUSSION, ActionKeys.VIEW,
+			ObjectActionKeys.OBJECT_ENTRY_HISTORY);
 
 		_assertResourceActions(
-			projectObjectEntry, DepotRolesConstants.ASSET_LIBRARY_ADMINISTRATOR,
-			ActionKeys.ADD_DISCUSSION, ActionKeys.DELETE,
-			ActionKeys.DELETE_DISCUSSION, ActionKeys.PERMISSIONS,
-			ActionKeys.UPDATE, ActionKeys.UPDATE_DISCUSSION, ActionKeys.VIEW);
-		_assertResourceActions(
-			projectObjectEntry,
-			DepotRolesConstants.ASSET_LIBRARY_CONTENT_REVIEWER,
+			cmpProjectObjectEntry, DepotRolesConstants.PROJECT_CONTRIBUTOR,
 			ActionKeys.ADD_DISCUSSION, ActionKeys.VIEW);
 		_assertResourceActions(
-			projectObjectEntry, DepotRolesConstants.ASSET_LIBRARY_MEMBER,
-			ActionKeys.ADD_DISCUSSION, ActionKeys.VIEW);
-
-		ObjectEntry taskObjectEntry = CMPTestUtil.addTaskObjectEntry(
-			projectObjectEntry);
-
-		_assertResourceActions(
-			taskObjectEntry, role.getName(), ActionKeys.ADD_DISCUSSION,
-			ActionKeys.DELETE, ActionKeys.DELETE_DISCUSSION,
-			ActionKeys.PERMISSIONS, ActionKeys.UPDATE,
-			ActionKeys.UPDATE_DISCUSSION, ActionKeys.VIEW);
-		_assertResourceActions(
-			taskObjectEntry, DepotRolesConstants.ASSET_LIBRARY_ADMINISTRATOR,
+			cmpProjectObjectEntry, DepotRolesConstants.PROJECT_MANAGER,
 			ActionKeys.ADD_DISCUSSION, ActionKeys.DELETE,
 			ActionKeys.DELETE_DISCUSSION, ActionKeys.PERMISSIONS,
-			ActionKeys.UPDATE, ActionKeys.UPDATE_DISCUSSION, ActionKeys.VIEW);
+			ActionKeys.SUBSCRIBE, ActionKeys.UPDATE,
+			ActionKeys.UPDATE_DISCUSSION, ActionKeys.VIEW,
+			ObjectActionKeys.OBJECT_ENTRY_HISTORY);
 		_assertResourceActions(
-			taskObjectEntry, DepotRolesConstants.ASSET_LIBRARY_CONTENT_REVIEWER,
-			ActionKeys.ADD_DISCUSSION, ActionKeys.DELETE,
+			cmpProjectObjectEntry, DepotRolesConstants.PROJECT_MEMBER,
+			ActionKeys.ADD_DISCUSSION, ActionKeys.VIEW,
+			ObjectActionKeys.OBJECT_ENTRY_HISTORY);
+
+		ObjectEntry cmpProjectLinkObjectEntry =
+			CMPTestUtil.addCMPProjectLinkObjectEntry(cmpProjectObjectEntry);
+
+		_assertResourceActions(
+			cmpProjectLinkObjectEntry, role.getName(), ActionKeys.DELETE,
 			ActionKeys.PERMISSIONS, ActionKeys.UPDATE, ActionKeys.VIEW);
 		_assertResourceActions(
-			taskObjectEntry, DepotRolesConstants.ASSET_LIBRARY_MEMBER,
-			ActionKeys.ADD_DISCUSSION, ActionKeys.VIEW);
+			cmpProjectLinkObjectEntry, DepotRolesConstants.PROJECT_CONTRIBUTOR,
+			ActionKeys.DELETE, ActionKeys.VIEW);
+		_assertResourceActions(
+			cmpProjectLinkObjectEntry, DepotRolesConstants.PROJECT_MANAGER,
+			ActionKeys.DELETE, ActionKeys.PERMISSIONS, ActionKeys.UPDATE,
+			ActionKeys.VIEW);
+		_assertResourceActions(
+			cmpProjectLinkObjectEntry, DepotRolesConstants.PROJECT_MEMBER,
+			ActionKeys.VIEW);
+
+		ObjectEntry cmpTaskObjectEntry = CMPTestUtil.addCMPTaskObjectEntry(
+			cmpProjectObjectEntry);
+
+		_assertCompletionRate(cmpProjectObjectEntry, 0);
+
+		ObjectEntryTestUtil.partialUpdateObjectEntry(
+			cmpTaskObjectEntry,
+			HashMapBuilder.<String, Serializable>put(
+				"state", "inProgress"
+			).build());
+		ObjectEntryTestUtil.partialUpdateObjectEntry(
+			cmpTaskObjectEntry,
+			HashMapBuilder.<String, Serializable>put(
+				"state", "done"
+			).build());
+
+		_assertCompletionRate(cmpProjectObjectEntry, 100);
+
+		CMPTestUtil.addCMPTaskObjectEntry(cmpProjectObjectEntry);
+
+		_assertCompletionRate(cmpProjectObjectEntry, 100);
+
+		_assertResourceActions(
+			cmpTaskObjectEntry, role.getName(), ActionKeys.ADD_DISCUSSION,
+			ActionKeys.DELETE, ActionKeys.DELETE_DISCUSSION,
+			ActionKeys.PERMISSIONS, ActionKeys.SUBSCRIBE, ActionKeys.UPDATE,
+			ActionKeys.UPDATE_DISCUSSION, ActionKeys.VIEW,
+			ObjectActionKeys.OBJECT_ENTRY_HISTORY);
+		_assertResourceActions(
+			cmpTaskObjectEntry, DepotRolesConstants.PROJECT_CONTRIBUTOR,
+			ActionKeys.ADD_DISCUSSION, ActionKeys.UPDATE, ActionKeys.VIEW,
+			ObjectActionKeys.OBJECT_ENTRY_HISTORY);
+		_assertResourceActions(
+			cmpTaskObjectEntry, DepotRolesConstants.PROJECT_MANAGER,
+			ActionKeys.ADD_DISCUSSION, ActionKeys.DELETE,
+			ActionKeys.DELETE_DISCUSSION, ActionKeys.PERMISSIONS,
+			ActionKeys.SUBSCRIBE, ActionKeys.UPDATE,
+			ActionKeys.UPDATE_DISCUSSION, ActionKeys.VIEW,
+			ObjectActionKeys.OBJECT_ENTRY_HISTORY);
+		_assertResourceActions(
+			cmpTaskObjectEntry, DepotRolesConstants.PROJECT_MEMBER,
+			ActionKeys.ADD_DISCUSSION, ActionKeys.VIEW,
+			ObjectActionKeys.OBJECT_ENTRY_HISTORY);
+
+		ObjectEntry cmpTaskLinkObjectEntry =
+			CMPTestUtil.addCMPTaskLinkObjectEntry(cmpTaskObjectEntry);
+
+		_assertResourceActions(
+			cmpTaskLinkObjectEntry, role.getName(), ActionKeys.DELETE,
+			ActionKeys.PERMISSIONS, ActionKeys.UPDATE, ActionKeys.VIEW);
+		_assertResourceActions(
+			cmpTaskLinkObjectEntry, DepotRolesConstants.PROJECT_CONTRIBUTOR,
+			ActionKeys.DELETE, ActionKeys.VIEW);
+		_assertResourceActions(
+			cmpTaskLinkObjectEntry, DepotRolesConstants.PROJECT_MANAGER,
+			ActionKeys.DELETE, ActionKeys.PERMISSIONS, ActionKeys.UPDATE,
+			ActionKeys.VIEW);
+		_assertResourceActions(
+			cmpTaskLinkObjectEntry, DepotRolesConstants.PROJECT_MEMBER,
+			ActionKeys.VIEW);
+	}
+
+	@Test
+	public void testOnAfterRemove() throws Exception {
+
+		// Deleting a CMP project with a staged asset library rolls back
+
+		ObjectEntry cmpProjectObjectEntry =
+			CMPTestUtil.addCMPProjectObjectEntry(
+				WorkflowConstants.ACTION_PUBLISH);
+
+		long groupId = cmpProjectObjectEntry.getGroupId();
+
+		GroupTestUtil.enableLocalStaging(_groupLocalService.getGroup(groupId));
+
+		try {
+			_objectEntryLocalService.deleteObjectEntry(
+				cmpProjectObjectEntry.getObjectEntryId());
+
+			Assert.fail();
+		}
+		catch (ModelListenerException modelListenerException) {
+			Assert.assertTrue(
+				modelListenerException.getCause() instanceof
+					DepotEntryStagedException);
+		}
+
+		Assert.assertNotNull(
+			_depotEntryLocalService.fetchGroupDepotEntry(groupId));
+		Assert.assertNotNull(
+			_objectEntryLocalService.fetchObjectEntry(
+				cmpProjectObjectEntry.getObjectEntryId()));
+
+		_stagingLocalService.disableStaging(
+			_groupLocalService.getGroup(groupId),
+			ServiceContextTestUtil.getServiceContext());
+
+		_objectEntryLocalService.deleteObjectEntry(
+			cmpProjectObjectEntry.getObjectEntryId());
+
+		// Deleting a draft CMP project deletes its asset library
+
+		cmpProjectObjectEntry = CMPTestUtil.addCMPProjectObjectEntry();
+
+		Assert.assertEquals(
+			WorkflowConstants.STATUS_DRAFT, cmpProjectObjectEntry.getStatus());
+
+		groupId = cmpProjectObjectEntry.getGroupId();
+
+		Assert.assertNotNull(
+			_depotEntryLocalService.fetchGroupDepotEntry(groupId));
+
+		_objectEntryLocalService.deleteObjectEntry(
+			cmpProjectObjectEntry.getObjectEntryId());
+
+		Assert.assertNull(
+			_depotEntryLocalService.fetchGroupDepotEntry(groupId));
+		Assert.assertNull(_groupLocalService.fetchGroup(groupId));
+
+		// Deleting an approved CMP project deletes its asset library and tasks
+
+		cmpProjectObjectEntry = CMPTestUtil.addCMPProjectObjectEntry(
+			WorkflowConstants.ACTION_PUBLISH);
+
+		Assert.assertEquals(
+			WorkflowConstants.STATUS_APPROVED,
+			cmpProjectObjectEntry.getStatus());
+
+		groupId = cmpProjectObjectEntry.getGroupId();
+
+		Assert.assertNotNull(
+			_depotEntryLocalService.fetchGroupDepotEntry(groupId));
+
+		ObjectEntry cmpTaskObjectEntry = CMPTestUtil.addCMPTaskObjectEntry(
+			cmpProjectObjectEntry);
+
+		_objectEntryLocalService.deleteObjectEntry(
+			cmpProjectObjectEntry.getObjectEntryId());
+
+		Assert.assertNull(
+			_depotEntryLocalService.fetchGroupDepotEntry(groupId));
+		Assert.assertNull(_groupLocalService.fetchGroup(groupId));
+		Assert.assertNull(
+			_objectEntryLocalService.fetchObjectEntry(
+				cmpTaskObjectEntry.getObjectEntryId()));
 	}
 
 	@Test
 	public void testOnAfterUpdate() throws Exception {
-		ObjectEntry projectObjectEntry = CMPTestUtil.addProjectObjectEntry();
+		ObjectEntry cmpProjectObjectEntry =
+			CMPTestUtil.addCMPProjectObjectEntry();
 
-		User user1 = UserTestUtil.addUser(projectObjectEntry.getGroupId());
-		User user2 = UserTestUtil.addUser(projectObjectEntry.getGroupId());
+		User user1 = UserTestUtil.addUser(cmpProjectObjectEntry.getGroupId());
+		User user2 = UserTestUtil.addUser(cmpProjectObjectEntry.getGroupId());
 
-		Map<String, Serializable> values = projectObjectEntry.getValues();
+		Map<String, Serializable> values = cmpProjectObjectEntry.getValues();
 
 		values.put("r_userToCMPProjectManager_userId", user1.getUserId());
 		values.put("r_userToCMPProjectSponsor_userId", user2.getUserId());
 
-		projectObjectEntry.setValues(values);
+		cmpProjectObjectEntry.setValues(values);
 
-		projectObjectEntry = _objectEntryLocalService.partialUpdateObjectEntry(
-			TestPropsValues.getUserId(), projectObjectEntry.getObjectEntryId(),
-			projectObjectEntry.getObjectEntryFolderId(), values,
-			ServiceContextTestUtil.getServiceContext());
+		cmpProjectObjectEntry = ObjectEntryTestUtil.partialUpdateObjectEntry(
+			cmpProjectObjectEntry, values);
 
 		_assertUserGroupRoles(
-			2,
-			List.of(
-				DepotRolesConstants.ASSET_LIBRARY_ADMINISTRATOR,
-				DepotRolesConstants.ASSET_LIBRARY_MEMBER),
-			projectObjectEntry.getGroupId(), user1.getUserId());
+			1, Collections.singletonList(DepotRolesConstants.PROJECT_MANAGER),
+			cmpProjectObjectEntry.getGroupId(), user1.getUserId());
 		_assertUserGroupRoles(
-			1,
-			Collections.singletonList(DepotRolesConstants.ASSET_LIBRARY_MEMBER),
-			projectObjectEntry.getGroupId(), user2.getUserId());
+			1, Collections.singletonList(DepotRolesConstants.PROJECT_MEMBER),
+			cmpProjectObjectEntry.getGroupId(), user2.getUserId());
+	}
+
+	@Test
+	public void testOnBeforeRemove() throws Exception {
+
+		// Deleting a CMS object entry deletes its links
+
+		ObjectEntry cmsBasicWebContentObjectEntry =
+			CMPTestUtil.addCMSBasicWebContentObjectEntry(
+				_depotEntry, RandomTestUtil.randomString());
+
+		ObjectEntry cmpProjectObjectEntry =
+			CMPTestUtil.addCMPProjectObjectEntry();
+
+		ObjectEntry cmpProjectLinkObjectEntry =
+			CMPTestUtil.addCMPProjectLinkObjectEntry(
+				cmpProjectObjectEntry, cmsBasicWebContentObjectEntry);
+
+		ObjectEntry cmpTaskObjectEntry = CMPTestUtil.addCMPTaskObjectEntry(
+			cmpProjectObjectEntry);
+
+		ObjectEntry cmpTaskLinkObjectEntry =
+			CMPTestUtil.addCMPTaskLinkObjectEntry(
+				cmpTaskObjectEntry, cmsBasicWebContentObjectEntry);
+
+		Assert.assertNotNull(
+			_objectEntryLocalService.fetchObjectEntry(
+				cmpProjectLinkObjectEntry.getObjectEntryId()));
+		Assert.assertNotNull(
+			_objectEntryLocalService.fetchObjectEntry(
+				cmpTaskLinkObjectEntry.getObjectEntryId()));
+
+		_objectEntryLocalService.deleteObjectEntry(
+			cmsBasicWebContentObjectEntry.getObjectEntryId());
+
+		Assert.assertNull(
+			_objectEntryLocalService.fetchObjectEntry(
+				cmpProjectLinkObjectEntry.getObjectEntryId()));
+		Assert.assertNull(
+			_objectEntryLocalService.fetchObjectEntry(
+				cmpTaskLinkObjectEntry.getObjectEntryId()));
+
+		// Deleting a non-CMS object entry keeps its links
+
+		cmpProjectObjectEntry = CMPTestUtil.addCMPProjectObjectEntry();
+
+		cmpTaskObjectEntry = CMPTestUtil.addCMPTaskObjectEntry();
+
+		cmpTaskLinkObjectEntry = CMPTestUtil.addCMPTaskLinkObjectEntry(
+			cmpTaskObjectEntry, cmpProjectObjectEntry);
+
+		_objectEntryLocalService.deleteObjectEntry(
+			cmpProjectObjectEntry.getObjectEntryId());
+
+		Assert.assertNotNull(
+			_objectEntryLocalService.fetchObjectEntry(
+				cmpTaskLinkObjectEntry.getObjectEntryId()));
+	}
+
+	private void _assertCompletionRate(
+			ObjectEntry cmpProjectObjectEntry, int expectedCompletionRate)
+		throws Exception {
+
+		Assert.assertEquals(
+			expectedCompletionRate,
+			MapUtil.getInteger(
+				_objectEntryLocalService.getValues(
+					cmpProjectObjectEntry.getObjectEntryId()),
+				"completionRate"));
 	}
 
 	private void _assertResourceActions(
@@ -167,8 +398,15 @@ public class ObjectEntryModelListenerTest {
 				String.valueOf(objectEntry.getObjectEntryId()),
 				role.getRoleId());
 
-		for (String actionId : actionIds) {
-			Assert.assertTrue(resourcePermission.hasActionId(actionId));
+		for (ResourceAction resourceAction :
+				_resourceActionLocalService.getResourceActions(
+					objectEntry.getModelClassName())) {
+
+			String actionId = resourceAction.getActionId();
+
+			Assert.assertEquals(
+				ArrayUtil.contains(actionIds, actionId),
+				resourcePermission.hasActionId(actionId));
 		}
 	}
 
@@ -189,6 +427,12 @@ public class ObjectEntryModelListenerTest {
 			userGroupRoleNames.containsAll(expectedUserGroupRoleNames));
 	}
 
+	@DeleteAfterTestRun
+	private DepotEntry _depotEntry;
+
+	@Inject
+	private DepotEntryLocalService _depotEntryLocalService;
+
 	@Inject
 	private GroupLocalService _groupLocalService;
 
@@ -196,9 +440,15 @@ public class ObjectEntryModelListenerTest {
 	private ObjectEntryLocalService _objectEntryLocalService;
 
 	@Inject
+	private ResourceActionLocalService _resourceActionLocalService;
+
+	@Inject
 	private ResourcePermissionLocalService _resourcePermissionLocalService;
 
 	@Inject
 	private RoleLocalService _roleLocalService;
+
+	@Inject
+	private StagingLocalService _stagingLocalService;
 
 }
